# SLAM_framework

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_mono.cpp  main_stereo.cpp  package.xml
config/: kitti_config_stereo.json
examples/: main_mono.cpp  main_stereo.cpp
scripts/: build.sh  build_release.sh  build_relwithdebinfo.sh  python_plot.py
src/: CMakeLists.txt  converter.h  frame.cpp  frame.h  initializer.cpp  initializer.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  local_mapper.cpp  local_mapper.h  loop_closer.cpp  loop_closer.h  map.cpp  map.h  map_point.cpp  map_point.h  optimizer.cpp  optimizer.h  orb_extractor.cpp  orb_extractor.h  orb_matcher.cpp  orb_matcher.h  orb_vocabulary.h  pnp_solver.cpp  pnp_solver.h  sim3solver.cpp  sim3solver.h  slam.cpp  slam.h  slam_system.cpp  slam_system.h  stereo_slam_system.cpp  stereo_slam_system.h  tracker.cpp  tracker.h
src/core/: local_mapper.cpp  local_mapper.h  loop_closer.cpp  loop_closer.h  tracker.cpp  tracker.h
src/data/: frame.cpp  frame.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  map.cpp  map.h  map_point.cpp  map_point.h
src/optimizer/: optimizer.cpp  optimizer.h
src/orb_features/: orb_extractor.cpp  orb_extractor.h  orb_matcher.cpp  orb_matcher.h  orb_vocabulary.h
src/ros/: ros_publisher.cpp  ros_publisher.h
src/solvers/: pnp_solver.cpp  pnp_solver.h  sim3solver.cpp  sim3solver.h
src/util/: converter.cpp  initializer.cpp  initializer.h  sensor_type.h  tracking_state.h
